@@ -46,7 +46,7 @@ using std::string;
 #define ID_CMD_DECRYPT_VERIFY	1
 #define ID_CMD_DECRYPT		2
 #define ID_CMD_VERIFY		3
-#define ID_CMD_ENCRYPT_SIGN	4
+#define ID_CMD_SIGN_ENCRYPT	4
 #define ID_CMD_ENCRYPT		5
 #define ID_CMD_SIGN		6
 #define ID_CMD_IMPORT		7
@@ -59,7 +59,7 @@ using std::string;
 #define ID_CMD_STR_DECRYPT_VERIFY	_("Decrypt and verify")
 #define ID_CMD_STR_DECRYPT		_("Decrypt")
 #define ID_CMD_STR_VERIFY		_("Verify")
-#define ID_CMD_STR_ENCRYPT_SIGN		_("Encrypt and sign")
+#define ID_CMD_STR_SIGN_ENCRYPT		_("Sign and encrypt")
 #define ID_CMD_STR_ENCRYPT		_("Encrypt")
 #define ID_CMD_STR_SIGN			_("Sign")
 #define ID_CMD_STR_IMPORT		_("Import keys")
@@ -289,8 +289,8 @@ gpgex_t::QueryContextMenu (HMENU hMenu, UINT indexMenu, UINT idCmdFirst,
     {
       /* FIXME: Check error.  */
       res = InsertMenu (hMenu, indexMenu++, MF_BYPOSITION | MF_STRING,
-			idCmdFirst + ID_CMD_ENCRYPT_SIGN,
-			ID_CMD_STR_ENCRYPT_SIGN);
+			idCmdFirst + ID_CMD_SIGN_ENCRYPT,
+			ID_CMD_STR_SIGN_ENCRYPT);
       if (! res)
 	return TRACE_RES (HRESULT_FROM_WIN32 (GetLastError ()));
     }
@@ -351,8 +351,8 @@ gpgex_t::QueryContextMenu (HMENU hMenu, UINT indexMenu, UINT idCmdFirst,
 		      ID_CMD_STR_SIGN);
   if (res)
     res = InsertMenu (popup, idx++, MF_BYPOSITION | MF_STRING,
-		      idCmdFirst + ID_CMD_ENCRYPT_SIGN,
-		      ID_CMD_STR_ENCRYPT_SIGN);
+		      idCmdFirst + ID_CMD_SIGN_ENCRYPT,
+		      ID_CMD_STR_SIGN_ENCRYPT);
   if (res)
     res = InsertMenu (popup, idx++, MF_BYPOSITION | MF_STRING,
 		      idCmdFirst + ID_CMD_IMPORT, ID_CMD_STR_IMPORT);
@@ -419,8 +419,8 @@ gpgex_t::GetCommandString (UINT idCommand, UINT uFlags, LPUINT lpReserved,
       txt = _("Verify the marked files.");
       break;
 
-    case ID_CMD_ENCRYPT_SIGN:
-      txt = _("Encrypt and sign the marked files.");
+    case ID_CMD_SIGN_ENCRYPT:
+      txt = _("Sign and encrypt the marked files.");
       break;
 
     case ID_CMD_ENCRYPT:
@@ -584,8 +584,8 @@ gpgex_t::InvokeCommand (LPCMINVOKECOMMANDINFO lpcmi)
       client.verify (this->filenames);
       break;
 
-    case ID_CMD_ENCRYPT_SIGN:
-      client.encrypt_sign (this->filenames);
+    case ID_CMD_SIGN_ENCRYPT:
+      client.sign_encrypt (this->filenames);
       break;
 
     case ID_CMD_ENCRYPT:
